tests/ui/string_not_iterable.rs
use metamatch::unquote;

fn main() {
    unquote! {
        "asdf".map(|x|x)
    }
}
